@@ -1,9 +1,26 @@
 plugins {
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.1.0'
     id 'org.javamodularity.moduleplugin' version '1.8.12'
     id 'org.beryx.jlink' version '3.0.1'
 }
+
+def os = System.getProperty('os.name').toLowerCase()
+def arch = System.getProperty('os.arch').toLowerCase()
+def installationType = "dmg"
+def platform = {
+    if(os.contains("mac")){
+        installationType = "dmg"
+        return arch.contains("aarch64") ? "mac-aarch64" : "mac-x64"
+    } else if(os.contains("win")){
+        installationType = "exe"
+        return "win"
+    } else if(os.contains("linux")){
+        installationType = "deb"
+        return "linux"
+    } else {
+        throw new GradleException("Unsupported OS: ${os}")
+    }
+}.call()
 
 repositories {
     mavenCentral()
@@ -19,21 +36,22 @@ application {
     mainClass = 'org.arjun.j2pui.HelloApplication'
 }
 
-javafx {
-    version = '21'
-    modules = ['javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base']
+jar{
+    manifest {
+        attributes(
+                'Main-class':'org.arjun.j2pui.HelloApplication'
+        )
+    }
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
 dependencies {
-    implementation('org.kordamp.bootstrapfx:bootstrapfx-core:0.4.0')
-    implementation('com.github.Arjungowda1:j2pbridge:main-SNAPSHOT')
-    implementation('org.fxmisc.richtext:richtextfx:0.11.2')
-    implementation 'org.openjfx:javafx-controls:21.0.3'
-    implementation 'org.openjfx:javafx-fxml:21.0.3'
-    implementation 'org.openjfx:javafx-base:21.0.3'
-    implementation 'org.openjfx:javafx-graphics:21.0.3'
-    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
-    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
+    implementation "com.github.Arjungowda1:j2pbridge:main-SNAPSHOT"
+    implementation "org.fxmisc.richtext:richtextfx:0.11.2"
+    implementation "org.openjfx:javafx-controls:21.0.3:${platform}"
+    implementation "org.openjfx:javafx-fxml:21.0.3:${platform}"
+    implementation "org.openjfx:javafx-graphics:21.0.3:${platform}"
+    implementation "org.openjfx:javafx-base:21.0.3:${platform}"
 }
 
 test {
@@ -44,13 +62,15 @@ jlink {
     options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages', '--bind-services']
     launcher {
         name = 'j2papp'
-        jvmArgs = ['--module-path', '$APPDIR/lib',
-                   '--add-modules', 'ALL-MODULE-PATH',
-                   '--add-opens', 'javafx.graphics/javafx.scene=org.arjun.j2pui',
-                   '--add-opens', 'javafx.controls/javafx.scene.control=org.arjun.j2pui']
     }
-    forceMerge 'javafx'
-    addExtraDependencies("javafx", "org.kordamp.bootstrapfx", "org.fxmisc.richtext")
+    addExtraDependencies("javafx-controls","javafx-fxml","javafx-graphics","javafx-base","org.fxmisc.richtext")
+    jpackage {
+        imageName = 'J2PApp'
+        appVersion = '1.0.0'
+        vendor = 'Arjun Gowda'
+        installerType = installationType
+        skipInstaller = false
+    }
 }
 
 tasks.jlink {
